[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Modes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/main_menu/title.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Fade in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.994296 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -611.5
margin_top = -334.5
margin_right = 611.5
margin_bottom = 334.5
custom_constants/margin_left = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 1223.0
margin_bottom = 669.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1223.0
margin_bottom = 669.0
alignment = 2

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 577.0
margin_right = 82.0
margin_bottom = 597.0
size_flags_horizontal = 0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 601.0
margin_right = 84.0
margin_bottom = 621.0
size_flags_horizontal = 0
text = "Load Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 625.0
margin_right = 63.0
margin_bottom = 645.0
size_flags_horizontal = 0
text = "Options"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 649.0
margin_right = 82.0
margin_bottom = 669.0
size_flags_horizontal = 0
text = "Quit Game"

[node name="FileDialog" type="FileDialog" parent="MarginContainer"]
margin_right = 1223.0
margin_bottom = 669.0
window_title = "Load Game"
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/home/sha-256/Documents/Godot Projects/Stories of Shatterrock"
current_path = "/home/sha-256/Documents/Godot Projects/Stories of Shatterrock/"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer"]
root_node = NodePath("ColorRect")
autoplay = "Fade in"
"anims/Fade in" = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer/AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.989979 )
__meta__ = {
"_edit_use_anchors_": false
}
